<package format="2">
  <name>glog_vendor</name>
  <version>0.3.5</version>
  <description>glog_vendor</description>
  <maintainer email="slynen@ethz.ch">Simon Lynen</maintainer>

  <license>See package</license>

  <buildtool_depend>ament</buildtool_depend>
  <depend>gflags_vendor</depend>
  <depend>libgoogle-glog-dev</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
